module expansion, ansible-lint & yamllint